fortran/ PR fortran/20323 * resolve.c (gfc_resolve): Check if character lengths are specification expressions.

testsuite/
PR fortran/20323
* gfortran.dg/spec_expr_1.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96382 138bc75d-0d04-0410-961f-82ee72b054a4